@@ -8,6 +8,7 @@
  ** Rewrote (but mostly just refactored) event configuration code.
  ** The [Opacity] tag should now properly return a number instead of a boolean.
  ** Added Mind Quickening to the IncreasedSpellHaste equivalency
+ ** Fixed [string "ConditionEvents_SPELLCHARGETIME"] line 3: attempt to call global 'GetSpellCharges' (a nil value)
  
 ===v6.1.1===
  * Added a new text output handler for the Instance channel, and updated existing chat output methods for this channel.
